--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -1,3 +1,4 @@
+
 .spacer {
   flex: 1 1 auto;
 }
@@ -40,6 +41,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap");
 /* header section*/
 header {
+  background-color: var(--main-bg-color);
   display: flex;
   justify-content: space-between;
   align-items: center;
